# GMPlayer

./: .env  .gitignore  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.json  CLAUDE.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  slave.html  tsconfig.json  vercel.json  vite.config.ts
.cursor/: mcp.json
.github/workflows/: build-app.yml
public/: tray-popup.html
src/: App.vue  env.d.ts  main.ts  slave-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/permissions/autogenerated/commands/: set_orientation.toml
src-tauri/src/: lib.rs  main.rs  shared.rs
src-tauri/src/algorithms/: chunk.rs  format_number.rs  mod.rs
src-tauri/src/desktop/: mod.rs
src-tauri/src/desktop/window/: commands.rs  config.rs  manager.rs  mod.rs  tray.rs
src-tauri/src/mobile/: mod.rs
src-tauri/src/mobile/media_session/: mod.rs
src-tauri/src/window/: commands.rs  config.rs  manager.rs  payload.rs  tray.rs
src-tauri/src/window/desktop_lyrics/: commands.rs
src/api/: album.ts  artist.ts  comment.ts  home.ts  index.ts  listenTogether.ts  login.ts  playlist.ts  search.ts  song.ts  types.ts  user.ts  video.ts
src/components/Banner/: index.vue
src/components/Comment/: index.vue
src/components/DataList/: AllArtists.vue  ArtistLists.vue  CoverLists.vue  DataLists.vue  SmallSongData.vue  VideoLists.vue
src/components/DataModal/: AboutSite.vue  CloudMatch.vue  DownloadSong.vue  ListenTogetherModal.vue  PlayListDrawer.vue  PlaylistUpdate.vue
src/components/Nav/: index.vue
src/components/Pagination/: index.vue
src/composables/: useAndroidMediaSession.ts  useBigPlayerCommon.ts  useFullscreen.ts  useMobileCoverFrame.ts  useMobileSafeAreaVars.ts  usePlayAllSong.ts  usePwaThemeColor.ts  useResponsiveLayout.ts  useTabTransition.ts
src/router/: index.js
src/store/: index.ts  listenTogether.ts  musicData.ts  settingData.ts  siteData.ts  userData.ts
src/style/: animate.scss  global.scss
src/types/: globals.d.ts
src/utils/: debounce.ts  getLanguageData.ts  lyricFetcher.ts  request.ts  timeTools.ts
(+145 files in other folders)
